crates/xabi/tests/ui/unsupported_shapes/trait_mut_bytes_argument.rs
#[xabi::xabi(id = "xabi.test.Bad", version = 1)]
pub trait Bad {
    fn write(&self, value: &mut [u8]) -> xabi::Result<()>;
}

fn main() {}
